--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
+
+ Modifications Copyright 2025 Andrei Trinogin
 -->
 <project
   xmlns="http://maven.apache.org/POM/4.0.0"
@@ -174,6 +176,7 @@
     <!-- Local macOS Java 21 says 0.92 -->
     <commons.jacoco.complexityRatio>0.91</commons.jacoco.complexityRatio>
     <commons.text.version>1.14.0</commons.text.version>
+    <javadoc.compress>true</javadoc.compress>
   </properties>
   <build>
     <defaultGoal>clean verify apache-rat:check checkstyle:check japicmp:cmp spotbugs:check pmd:check javadoc:javadoc</defaultGoal>
@@ -217,6 +220,7 @@
             <notimestamp>true</notimestamp>
             <validateLinks>true</validateLinks>
             <archive>
+              <compress>${javadoc.compress}</compress>
               <manifest>
                 <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                 <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
@@ -539,6 +543,193 @@
         <heapSize>-Xmx1024m</heapSize>
         <systemProperties>-Dtest.large.heap=true</systemProperties>
       </properties>
+    </profile>
+    <profile>
+      <id>with-cached-rn</id>
+      <properties>
+        <release.notes.cacheUrl>https://maven.pkg.github.com/Trinogin/tc-ci</release.notes.cacheUrl>
+        <release.notes.cache.serverId>github-tc-ci</release.notes.cache.serverId>
+        <release.notes.cache.groupId>org.trinogin</release.notes.cache.groupId>
+        <release.notes.cache.artifactId>rn</release.notes.cache.artifactId>
+
+        <release.notes.marketing.site.url>https://raw.githubusercontent.com/Trinogin/commons-lang/refs/heads/master/RELEASE-NOTES.txt</release.notes.marketing.site.url>
+        
+        <release.notes.directory>${project.build.directory}/rn</release.notes.directory>
+        <release.notes.filename>release-notes.txt</release.notes.filename>
+        <javadoc.compress>false</javadoc.compress>
+      </properties>
+      <pluginRepositories>
+        <pluginRepository>
+          <id>github-tc-ci</id>
+          <name>GitHub Packages</name>
+          <url>https://maven.pkg.github.com/Trinogin/tc-ci</url>
+        </pluginRepository>
+      </pluginRepositories>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>enforce-os-profile</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <requireProperty>
+                      <property>os.profile.active</property>
+                      <message>You must activate either 'with-unix' or 'with-windows' profile.</message>
+                    </requireProperty>
+                  </rules>
+                  <fail>true</fail>
+                </configuration>
+              </execution>
+              <execution>
+                <id>enforce-java</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <requireJavaVersion>
+                      <version>[21.0.6]</version>
+                    </requireJavaVersion>
+                  </rules>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.trinogin</groupId>
+            <artifactId>release-notes-maven-plugin</artifactId>
+            <version>1.0</version>
+            <executions>
+              <execution>
+                <id>fetch-release-notes</id>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>download-single</goal>
+                </goals>
+                <configuration>
+                  <cacheServerId>${release.notes.cache.serverId}</cacheServerId>
+                  <cacheUrl>${release.notes.cacheUrl}</cacheUrl>
+                  <groupId>${release.notes.cache.groupId}</groupId>
+                  <artifactName>${release.notes.cache.artifactId}</artifactName>
+
+                  <originalUrl>${release.notes.marketing.site.url}</originalUrl>
+                  
+                  <outputDirectory>${release.notes.directory}</outputDirectory>
+                  <outputFileName>${release.notes.filename}</outputFileName>
+                </configuration>
+              </execution>
+              <execution>
+                <id>deploy-release-notes</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>deploy-single</goal>
+                </goals>
+                <configuration>
+                  <cacheServerId>${release.notes.cache.serverId}</cacheServerId>
+                  <cacheUrl>${release.notes.cacheUrl}</cacheUrl>
+                  <groupId>${release.notes.cache.groupId}</groupId>
+                  <artifactName>${release.notes.cache.artifactId}</artifactName>
+
+                  <inputDirectory>${release.notes.directory}</inputDirectory>                  
+                  <inputFileName>${release.notes.filename}</inputFileName>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>make-release-notes-assembly</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+                <configuration>
+                  <descriptors>
+                    <descriptor>src/assembly/release-notes-assembly.xml</descriptor>
+                  </descriptors>
+                  <finalName>distr</finalName>
+                  <appendAssemblyId>false</appendAssemblyId>
+                  <tarLongFileMode>gnu</tarLongFileMode>
+                  <overrideUid>0</overrideUid>
+                  <overrideGid>0</overrideGid>
+                  <overrideUserName>root</overrideUserName>
+                  <overrideGroupName>root</overrideGroupName>
+                  <outputTimestamp>${project.build.outputTimestamp}</outputTimestamp>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>with-unix</id>
+      <properties>
+        <os.profile.active>true</os.profile.active>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>enforce-os-unix</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <requireOS>
+                      <family>unix</family>
+                    </requireOS>
+                  </rules>
+                  <fail>true</fail>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>with-windows</id>
+      <properties>
+        <os.profile.active>true</os.profile.active>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>enforce-os-windows</id>
+                <goals>
+                  <goal>enforce</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <requireOS>
+                      <family>windows</family>
+                    </requireOS>
+                  </rules>
+                  <fail>true</fail>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
   <developers>
